--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Warhorse - Confecciones de prendas personalizadas</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="🧵✨ Descubre nuestro taller de costura y confección en Luján. Prendas únicas y con estilo que reflejan tu esencia. ¡Confeccionamos tus sueños! 👗👔 #TallerDeCostura #LujánFashion" name="description">
+  <meta content="taller de costura, taller de costura y confección, taller de costura buenos aires, taller de ropa, a la moda" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -74,7 +74,7 @@
           <div><a href="#about" class="btn-get-started scrollto">Comencemos</a></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="assets/img/hero-img.webp" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -170,11 +170,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/thumb/buzos3.webp" class="img-fluid" alt="">
+              <img src="assets/img/thumb/buzos5.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Buzo Egresado</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/galeria/buzos3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Buzos Egresados"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/galeria/buzos5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Buzos Egresados"><i class="bx bx-plus"></i></a>
                   
                 </div>
               </div>
@@ -183,12 +183,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/thumb/buzo12.webp" class="img-fluid" alt="">
+              <img src="assets/img/thumb/buzo11.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Buzo con Capucha</h4>
                
                 <div class="portfolio-links">
-                  <a href="assets/img/galeria/buzo12.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Buzo con Capucha"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/galeria/buzo11.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Buzo con Capucha"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -566,9 +566,9 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Warhorse</h3>
             <p>
-              Realizamos confecciones de prendas personalizadas. Confeccionamos
-              uniformes para escuelas, de trabajo, conjuntos de fútbol y ropa para 
-              egresados. Hacemos todo tipo de diseños en bordados y sublimados
+              Experimenta la excelencia de nuestro taller de costura y confección en Luján. 
+              Prendas únicas y con estilo que reflejan tu esencia. Diseñamos y confeccionamos uniformes, 
+              guardapolvos, buzos de egresados e indumentaria
             </p>
           </div>
 
