--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h1>Creamos prendas personalizadas</h1>
           <h2>Realizamos prendas que te identifican y te acompañan día a días. Confeccionamos uniformes, ropa para 
             egresados, conjuntos de fútbol. Vos lo diseñás nosotros lo confeccionamos.</h2>
-          <div><a href="#about" class="btn-get-started scrollto">Comencemos</a></div>
+          <div><a href="#contact" class="btn-get-started scrollto">Comencemos</a></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <img src="assets/img/hero-img.webp" class="img-fluid" alt="">
